Fix arborescence prod

--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
         <!-- (Desktop) Lors scroll: sideNav -->
         <ul id="sideNavDesktop">
             <li class="sideNavDesktop">
-                <a href="accueil.html" style="position:relative; right:2px;">
+                <a href="index.html" style="position:relative; right:2px;">
                     <i class="fa-solid fa-house desktopNavAccueil notActifNavDesktop"></i>
                     <span class="desktopNavSpan">Accueil</span>
                 </a>
@@ -92,7 +92,7 @@
             <ul style="position:relative;">
 
                 <li>
-                    <a id="accueilMenu" class="menuButton" href="accueil.html">
+                    <a id="accueilMenu" class="menuButton" href="index.html">
                         <i class="fa-solid fa-house homeIconFa" style="color:#ef3b2dde;"></i>
                         <span style="margin-left:7px;">Accueil</span>
                     </a>
@@ -160,7 +160,7 @@
         <header id="headerCv" class="darkedHeader" style="position:relative;">
             <div id="pageTitleDiv" style="width:100%;">
                 <h1 id="titleH1" class="testH1">
-                    <a href="accueil.html">
+                    <a href="index.html">
                         Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
                         <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
                     </a>
@@ -195,7 +195,7 @@
             <!-- NavBarre -->
             <div id="NavBarContainer" class="isDesktop">
                 <p id="menuLigneCv" style="color:#E7E8F2;">
-                    <a id="accueilMenu" class="menuButton" href="accueil.html">Accueil</a> 
+                    <a id="accueilMenu" class="menuButton" href="index.html">Accueil</a> 
                     <!-- &nbsp;  -->
                     <a id="cvMenu" class="menuButton selected" href="cv.html">Mon CV</a> 
                     <!-- &nbsp;  -->
