--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <ul style="position:relative;">
                 <li>
-                    <a id="accueilMenu" class="menuButton selected" href="accueil.html">
+                    <a id="accueilMenu" class="menuButton selected" href="index.html">
                         <i class="fa-solid fa-house homeIconFa"></i>
                         <span style="margin-left:7px;">Accueil</span>
                     </a>
@@ -126,7 +126,7 @@
             <!-- (Desktop) Lors scroll: sideNav -->
             <ul id="sideNavDesktop">
                 <li class="sideNavDesktop sideNavDesktopActif">
-                    <a href="accueil.html" style="position:relative; right:2px;">
+                    <a href="index.html" style="position:relative; right:2px;">
                         <i class="fa-solid fa-house desktopNavAccueil desktopNavAccueilActif"></i>
                         <span class="desktopNavSpan desktopSpanActif">Accueil</span>
                     </a>
@@ -157,7 +157,7 @@
             <header id="headerAccueil" style="position:relative;" data-theme="dark">
                 <div id="pageTitleDiv" style="width:100%;">
                     <h1 id="titleH1" class="testH1">
-                        <a href="accueil.html">
+                        <a href="index.html">
                             Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
                             <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
                         </a>
@@ -190,7 +190,7 @@
                 <!-- NavBarre -->
                 <div id="NavBarContainer" class="navBarContainerMobile isDesktop">
                     <p id="menuLigneCv" data-theme="dark">
-                        <a id="accueilMenu" class="menuButton selected" href="accueil.html">Accueil</a> 
+                        <a id="accueilMenu" class="menuButton selected" href="index.html">Accueil</a> 
                         <!-- &nbsp;  -->
                         <a id="cvMenu" class="menuButton" href="cv.html">Mon CV</a> 
                         <!-- &nbsp;  -->
