--- a/projets.html
+++ b/projets.html
@@ -77,7 +77,7 @@
             <ul style="position:relative;">
 
                 <li>
-                    <a id="accueilMenu" class="menuButton" href="accueil.html">
+                    <a id="accueilMenu" class="menuButton" href="index.html">
                         <i class="fa-solid fa-house homeIconFa" style="color:#ef3b2dde;"></i>
                         <span style="margin-left:7px;">Accueil</span>
                     </a>
@@ -141,7 +141,7 @@
             <!-- Header ("Portfolio. + Basile KUNTZ - Developpeur Web") -->
             <div id="pageTitleDiv" style="width:100%;">
                 <h1 id="titleH1" class="testH1">
-                    <a href="accueil.html">
+                    <a href="index.html">
                         Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
                         <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
                     </a>
@@ -172,7 +172,7 @@
             <!-- Menu -->
             <div id="NavBarContainer" class="isDesktop">
                 <p id="menuLigneCv" style="color:#E7E8F2;">
-                    <a id="accueilMenu" class="menuButton" href="accueil.html">Accueil</a> 
+                    <a id="accueilMenu" class="menuButton" href="index.html">Accueil</a> 
                     <!-- &nbsp;  -->
                     <a id="cvMenu" class="menuButton" href="cv.html">Mon CV</a> 
                     <!-- &nbsp;  -->
