--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="fixScalePortraitPC" style="position:relative;">
                         
                         <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" data-theme="dark">
-                            <img src="..\img\portraits\portraitPng2Test.png" class="testPopPortraitImg" />
+                            <img src="..\img\portraits\portrait_bw.png" class="testPopPortraitImg" />
                         </div>
 
                     </div>
