CSS trait <formations/> puces

--- a/cv.html
+++ b/cv.html
@@ -261,6 +261,8 @@
 
                         <ul class="cvFormationsList">
 
+                            <div class="traitFormationsPuces"></div>
+
                             <li>
                                 2023: Formation <span class="highlightSpan">"Développeur web et web mobile"</span> à Élan Formation Strasbourg (validé)
                                 <br>
