.htaccess https + WIP observers /index + btn PDF responsiv + styles

--- a/cv.html
+++ b/cv.html
@@ -221,9 +221,18 @@
 
             <div>
                 <h2 id="titleCv" class="cvTitle">
-                    <a href="CV_BasileKuntz_2024_v2.pdf" download="CV_basileKuntz" id="dlCv">
+
+                    <a class="isDesktopInline" href="CV_BasileKuntz_2024_v2.pdf" download="CV_basileKuntz" id="dlCv">
                         <i class="fa-solid fa-file-arrow-down downloadCvIcon"></i>Télécharger en PDF
-                    </a><span id="underlineCV">Mon &nbsp;<span style="letter-spacing:3px;">CV</span></span>
+                    </a>
+
+                    
+                    <a class="isMobile" href="CV_BasileKuntz_2024_v2.pdf" download="CV_basileKuntz" id="dlCv">
+                        <i class="fa-solid fa-file-arrow-down downloadCvIcon"></i> PDF
+                    </a>
+
+                    <span id="underlineCV">Mon &nbsp;<span style="letter-spacing:3px;">CV</span></span>
+
                 </h2>
             </div>
 
