--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css" />
         <link rel="stylesheet" type="text/css" href="../css/style4k.css" />
 
+        <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/698848973e.js" crossorigin="anonymous"></script>
 
         <!-- Favicon -->
@@ -218,7 +219,7 @@
 
                 </br>
 
-                <div class="accueilGrid">
+                <div id="accueilGridPresentation" class="accueilGrid">
 
                     <div class="fixScalePortraitPC" style="position:relative;">
                         
