suppr subtitles Portfolio Desktop (WIP margins) + dimension portrait

--- a/cv.html
+++ b/cv.html
@@ -159,7 +159,7 @@
         <!-- Header -->
         <header id="headerCv" class="darkedHeader" style="position:relative;">
             <div id="pageTitleDiv" style="width:100%;">
-                <h1 id="titleH1" class="testH1">
+                <h1 id="titleH1" class="testH1 testH1-pluba">
                     <a href="index.html">
                         Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
                         <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
@@ -179,15 +179,15 @@
 
                 <span  id="lineBreakMobile"></br></span>
 
-                <h2 id="portfolioSousTitre" style="margin-left:6%; color:#ef3b2d;">
+                <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
                     Basile KUNTZ 
                     <span style="color:#E7E8F2; font-size:80%;"> -  Développeur Web 
                         <span id="lineBreakMobileStatus"></br></span>
-                        <span id="status" class="isDesktopInline"> #OpenToWork</span>
+                        <!-- <span id="status" class="isDesktopInline"> #OpenToWork</span>
                         <span id="status2" class="isDesktopInline">
                             <i class="fa-solid fa-magnifying-glass"></i>
                             Alternance CDA
-                        </span>
+                        </span> -->
                     </span>
                 </h2>
             </div>
@@ -217,7 +217,7 @@
 
 
         <!-- Contenu Page -->
-        <div id="pageContainer">
+        <div id="pageContainer" class="pageContainerCv">
 
             <div>
                 <h2 id="titleCv" class="cvTitle">
@@ -273,12 +273,12 @@
                             <div class="traitFormationsPuces"></div>
 
                             <li>
-                                2023: Formation <span class="highlightSpan">"Développeur web et web mobile"</span> à Élan Formation Strasbourg (validé)
+                                2023: Formation <span class="highlightSpan">"Développeur web et web mobile"</span> à Élan Formation Strasbourg
                                 <br>
                                 <div id="stageBandeau1" class="stageBandeau">
 
                                     <div>
-                                        <i class="fa-solid fa-arrow-right" style="margin-right:6px; color:#ef3b2d;"></i> <span class="highlightSpan secondaryColorVif">Stage</span> chez Hoplunch (Oberhausbergen)
+                                        <i class="fa-solid fa-arrow-right" style="margin-right:6px; color:#ef3b2d;"></i> <span class="highlightSpan secondaryColorVif">Stage</span> chez Hoplunch
                                     </div>
                                     <!-- <div class="formationChevron">
                                         <i class="fa-solid fa-chevron-down formationChevronIcon"></i>
@@ -299,7 +299,7 @@
                                 <div id="stageBandeau2" class="stageBandeau">
 
                                     <div>
-                                        <i class="fa-solid fa-arrow-right " style="margin-right:6px; color:#ef3b2d;"></i> <span class="highlightSpan secondaryColorVif">Alternance</span> chez Europe Tech Group (Haguenau)
+                                        <i class="fa-solid fa-arrow-right " style="margin-right:6px; color:#ef3b2d;"></i> <span class="highlightSpan secondaryColorVif">Alternance</span> chez Europe Tech Group
                                     </div>  
                                     <!-- <div class="formationChevron">
                                         <i class="fa-solid fa-chevron-down formationChevronIcon"></i>
