--- a/index.html
+++ b/index.html
@@ -157,13 +157,11 @@
             <!-- Header -->
             <header id="headerAccueil" style="position:relative;" data-theme="dark">
                 <div id="pageTitleDiv" style="width:100%;">
-                    <h1 id="titleH1" class="testH1">
+                    <h1 id="titleH1" class="testH1" style="padding-top:2px;">
                         <a href="index.html">
                             Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
-                            <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
                         </a>
                         <!-- Smiley -->
-                        <!-- <span id="titleSmile" class="titleSmile">)</span> -->
                         <svg id="smileSvgContainer" class="smileSvgContainer" style="position:absolute;">
                             <g class="smileSvg">
                                 <path 
@@ -176,14 +174,14 @@
                     </h1>
                     <!-- oskour -->
                     <span  id="lineBreakMobile"></br></span>
-                    <h2 id="portfolioSousTitre" style="margin-left:6%; color:#ef3b2d;">
+                    <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
                         <span class="authorTitle">Basile KUNTZ </span>
                         <span style="color:#E7E8F2; font-size:80%;">
                             -  Développeur Web <span id="lineBreakMobileStatus"></br></span>
-                            <span id="status" class="isDesktopInline"> #OpenToWork</span>
+                            <!-- <span id="status" class="isDesktopInline"> #OpenToWork</span>
                             <span id="status2" class="isDesktopInline">
                                 <i class="fa-solid fa-magnifying-glass"></i> Alternance CDA
-                            </span>
+                            </span> -->
                         </span>
                     </h2>
                 </div>
