--- a/projets.html
+++ b/projets.html
@@ -140,7 +140,7 @@
                 
             <!-- Header ("Portfolio. + Basile KUNTZ - Developpeur Web") -->
             <div id="pageTitleDiv" style="width:100%;">
-                <h1 id="titleH1" class="testH1">
+                <h1 id="titleH1" class="testH1 testH1-pluba">
                     <a href="index.html">
                         Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
                         <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
@@ -158,12 +158,12 @@
                     </svg>
                 </h1>                
                 <span id="lineBreakMobile"></br></span>
-                <h2 id="portfolioSousTitre" style="margin-left:6%; color:#ef3b2d;">
+                <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
                     Basile KUNTZ 
                     <span style="color:#E7E8F2; font-size:80%;"> -  Développeur Web 
                         <span id="lineBreakMobileStatus"></br></span>
-                        <span id="status" class="isDesktopInline"> #OpenToWork</span>
-                        <span id="status2" class="isDesktopInline"><i class="fa-solid fa-magnifying-glass"></i> Alternance CDA</span>
+                        <!-- <span id="status" class="isDesktopInline"> #OpenToWork</span>
+                        <span id="status2" class="isDesktopInline"><i class="fa-solid fa-magnifying-glass"></i> Alternance CDA</span> -->
                     </span>
                 </h2>
             </div>
