--- a/cv.html
+++ b/cv.html
@@ -158,6 +158,7 @@
 
         <!-- Header -->
         <header id="headerCv" class="darkedHeader" style="position:relative;">
+
             <div id="pageTitleDiv" style="width:100%;">
                 <h1 id="titleH1" class="testH1 testH1-pluba">
                     <a href="index.html">
@@ -177,19 +178,13 @@
                     </svg>
                 </h1>
 
-                <span  id="lineBreakMobile"></br></span>
-
                 <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
-                    Basile KUNTZ 
-                    <span style="color:#E7E8F2; font-size:80%;"> -  Développeur Web 
-                        <span id="lineBreakMobileStatus"></br></span>
-                        <!-- <span id="status" class="isDesktopInline"> #OpenToWork</span>
-                        <span id="status2" class="isDesktopInline">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                            Alternance CDA
-                        </span> -->
+                    <span class="authorTitle">Basile KUNTZ </span>
+                    <span style="color:#E7E8F2; font-size:80%;">
+                        <span class="isDesktopInline">-  </span>Développeur Web 
                     </span>
                 </h2>
+
             </div>
 
             <!-- NavBarre -->
