--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
             <!-- Header -->
             <header id="headerAccueil" style="position:relative;" data-theme="dark">
+
                 <div id="pageTitleDiv" style="width:100%;">
                     <h1 id="titleH1" class="testH1" style="padding-top:2px;">
                         <a href="index.html">
@@ -172,18 +173,14 @@
                             </g>
                         </svg>
                     </h1>
-                    <!-- oskour -->
-                    <span  id="lineBreakMobile"></br></span>
+
                     <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
                         <span class="authorTitle">Basile KUNTZ </span>
                         <span style="color:#E7E8F2; font-size:80%;">
-                            -  Développeur Web <span id="lineBreakMobileStatus"></br></span>
-                            <!-- <span id="status" class="isDesktopInline"> #OpenToWork</span>
-                            <span id="status2" class="isDesktopInline">
-                                <i class="fa-solid fa-magnifying-glass"></i> Alternance CDA
-                            </span> -->
+                            <span class="isDesktopInline">-  </span>Développeur Web 
                         </span>
                     </h2>
+
                 </div>
 
                 <!-- NavBarre -->
