--- a/loisirs.html
+++ b/loisirs.html
@@ -194,7 +194,7 @@
             <!-- Header  -->
             <div id="headerLoisirs" class="testHeader">
                     
-                <h1 id="titleH1" class="testH1">
+                <h1 id="titleH1" class="testH1 testH1mobile">
                     <a href="index.html">
                         Portf<span class="titleO">o</span>li<span class="titleO">o</span> 
                         <!-- <span style="color:#E7E8F2; position:relative; top:6px;">&#9642;</span> -->
