--- a/projets.html
+++ b/projets.html
@@ -157,15 +157,15 @@
                         </g>
                     </svg>
                 </h1>                
-                <span id="lineBreakMobile"></br></span>
+
+
                 <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
-                    Basile KUNTZ 
-                    <span style="color:#E7E8F2; font-size:80%;"> -  Développeur Web 
-                        <span id="lineBreakMobileStatus"></br></span>
-                        <!-- <span id="status" class="isDesktopInline"> #OpenToWork</span>
-                        <span id="status2" class="isDesktopInline"><i class="fa-solid fa-magnifying-glass"></i> Alternance CDA</span> -->
+                    <span class="authorTitle">Basile KUNTZ </span>
+                    <span style="color:#E7E8F2; font-size:80%;">
+                        <span class="isDesktopInline">-  </span>Développeur Web 
                     </span>
                 </h2>
+
             </div>
 
 
