blur menuBörgir + WIP header resp

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <ul id="sideNavDesktop">
                 <li class="sideNavDesktop sideNavDesktopActif">
                     <a href="index.html" style="position:relative; right:2px;">
-                        <i class="fa-solid fa-house desktopNavAccueil desktopNavAccueilActif"></i>
+                        <i class="fa-solid fa-house desktopNavAccueil desktopNavAccueilActif" style="right:0px;"></i>
                         <span class="desktopNavSpan desktopSpanActif">Accueil</span>
                     </a>
                 </li>
@@ -179,6 +179,13 @@
                         <span style="color:#E7E8F2; font-size:80%;">
                             <span class="isDesktopInline">-  </span>Développeur Web 
                         </span>
+
+                        <span class="isDesktop alertSeekDesktopWrap">
+                            <span class="alertSeekDesktop">
+                                <i class="fa-solid fa-binoculars jumellesIcon"></i>
+                                <span>En recherche d'alternance CDA</span>
+                            </span>
+                        </span>
                     </h2>
 
                 </div>
@@ -209,7 +216,7 @@
                         <a class="gitHubLink" target="_blank" href="https://github.com/baku67">
                             <img src="../img/githubLogo2.png" id="githubBtnImg" class="githubLogo" data-theme="dark">
                         </a>
-                    <h2 id="pageTitle" class="pageTitle" data-theme="dark">Bienvenue sur mon portfolio</h2>
+                    <h2 id="pageTitle" class="pageTitle pageTitleAccueil" data-theme="dark">Bienvenue sur mon <br class="isMobile">portfolio</h2>
                 </div>
 
                 </br>
