--- a/projets.html
+++ b/projets.html
@@ -160,10 +160,19 @@
 
 
                 <h2 id="portfolioSousTitre" style="color:#ef3b2d;">
+
                     <span class="authorTitle">Basile KUNTZ </span>
                     <span style="color:#E7E8F2; font-size:80%;">
                         <span class="isDesktopInline">-  </span>Développeur Web 
                     </span>
+
+                    <span class="isDesktop alertSeekDesktopWrap">
+                        <span class="alertSeekDesktop">
+                            <i class="fa-solid fa-binoculars jumellesIcon"></i>
+                            <span>En recherche d'alternance CDA</span>
+                        </span>
+                    </span>
+
                 </h2>
 
             </div>
