--- a/projets.html
+++ b/projets.html
@@ -397,7 +397,7 @@
                                                 <li>SQL/BDD</li>
                                             </ul>
 
-                                            <ul class="projetFuncList">
+                                            <ul class="projetFuncList projetFuncListPositionMobile">
                                                 <li>Système de compte (+Crédits quotidiens)</li>
                                                 <li>Système de progression (expérience/niveaux)</li>
                                                 <li>Système de Win-streak</li>
@@ -508,7 +508,7 @@
 
                         <swiper-slide>
 
-                            <div id="projectContainer2">
+                            <div id="projectContainer2" class="projet3PositionMobile">
 
                                 <div class="gridProjetHeaderContainer description3boxShadow">
 
@@ -527,9 +527,9 @@
                                     <div class="description">
 
                                         <h3 class="projetNbr">Projet 3</h3>
-                                        <div class="projectTitle">
+                                        <div class="projectTitle projectTitleTerrine">
                                             <img src="../img/projects/terrine.png" class="projectSlideLogo" style="padding-right: 7px; width: 69px;" />
-                                            <p class="projetSlideTitle" style="font-family: 'Righteous'">Terrine</p>
+                                            <p class="projetSlideTitle projetSlideTitleTerrine" style="font-family: 'Righteous'">Terrine</p>
                                         </div>
 
                                         <p class="projetDescriptionText">Site de gestion de plateforme cinématographique</p> 
