Responsiv (dont splide) + WIP bg shapes.png /project

--- a/projets.html
+++ b/projets.html
@@ -215,11 +215,22 @@
 
                         <swiper-slide id="projectSlide1">
 
+                            <!-- Shape absolute (haut gauche) PC -->
+                            <img src="../img/projects/bgShapes2-min.png" class="projectShapeBgAnim1 projectShapesDiv-top-left isDesktop" />
+
+                            <!-- Shape absolute (bas-droite)-->
+                            <img src="../img/projects/bgShapes1_squadforge2-min.png" class="projectShapeBgAnim2 projectShapesDiv-bottom-right" />
+
                             <div id="projectContainer">
 
                                 <div class="gridProjetHeaderContainer description1boxShadow">
 
+
                                     <div class="iframe">
+
+                                        <!-- Shape absolute (haut gauche) Mobile -->
+                                        <img src="../img/projects/bgShapes2-min.png" class="projectShapeBgAnim1-mobile projectShapesDiv-top-left isMobile" />
+
                                         <!-- WIP Fleche SVG pc -->
                                         <!-- <svg class="arrowSvgContainer" style="position:absolute;">
                                             <g class="arrowSvg">
@@ -229,6 +240,9 @@
                                                 />
                                             </g>
                                         </svg> -->
+
+                                        <!-- Reflet -->
+                                        <div class="iframeReflet"></div>
 
                                         <div class="boutonMockup"></div>
                                         <div class="boutonMockup2"></div>
@@ -244,6 +258,9 @@
 
 
                                     <div class="description">
+
+                                        <!-- Shape absolute (haut gauche) Mobile -->
+                                        <img src="../img/projects/bgShapes1_squadforge2-min(rotated).png" class="projectShapeBgAnim1-mobile topLeftBgMobile projectShapesDiv-top-left isMobile" />
 
                                         <h3 class="projetNbr">Projet 1</h3>
                                         <div class="projectTitle">
@@ -528,7 +545,7 @@
 
                                         <h3 class="projetNbr">Projet 3</h3>
                                         <div class="projectTitle projectTitleTerrine">
-                                            <img src="../img/projects/terrine.png" class="projectSlideLogo" style="padding-right: 7px; width: 69px;" />
+                                            <img src="../img/projects/terrine.png" class="projectSlideLogo projectSlideLogo3" />
                                             <p class="projetSlideTitle projetSlideTitleTerrine" style="font-family: 'Righteous'">Terrine</p>
                                         </div>
 
