WIP menu Börgir fixed mobile + WIP resp /projets

--- a/cv.html
+++ b/cv.html
@@ -48,6 +48,17 @@
 
     <body data-theme="dark">
 
+
+        <!-- Fixed menu Burger (mobile) lors scroll -->
+        <a href="#" id="openBtn2" class="opentBtnFixed isMobile">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
+
+
         <!-- ScrollToTop -->
         <div id="scrollToTop" class="isMobile">
             <i class="fa-solid fa-arrow-up"></i>
