--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 
 
 
+        <!-- Fixed menu Burger (mobile) lors scroll -->
+        <a href="#" id="openBtn2" class="opentBtnFixed isMobile">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
+
+
 
         <!-- WIP menu-burger mobile -->
         <div id="mySidenav" class="sidenav isMobile" data-theme="dark">
@@ -226,7 +236,12 @@
                     <div class="fixScalePortraitPC" style="position:relative;">
                         
                         <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" data-theme="dark">
+
+                            <!-- WIP traits -->
+                            <!-- <div class="portraitTrait1"></div> -->
+
                             <img src="..\img\portraits\portrait_bw.png" class="testPopPortraitImg" />
+
                         </div>
 
                     </div>
