--- a/loisirs.html
+++ b/loisirs.html
@@ -49,11 +49,26 @@
 
     <body id="bodyLoisir" class="bodyLoisir" style="position:relative;" data-theme="dark">
 
+
+
+        <!-- Fixed menu Burger (mobile) lors scroll -->
+        <a href="#" id="openBtn2" class="opentBtnFixed isMobile">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
+
+
+
         <!-- ScrollToTop -->
         <div id="scrollToTop" class="isMobile">
             <i class="fa-solid fa-arrow-up"></i>
         </div>
         
+
+
 
         <!-- (Desktop) Lors scroll: sideNav -->
         <ul id="sideNavDesktop">
