WIP /projets responsiv + compression carrouselsImgs (75%)

--- a/projets.html
+++ b/projets.html
@@ -346,19 +346,19 @@
                                                 <div class="splide__track">
                                                     <ul class="splide__list" style="list-style-type:none;">
                                                         <li class="splide__slide" style="list-style-type:none;">
-                                                            <img src="..\img\demos\screenShots\squadforge1.png" class="carouselImgProject" />
+                                                            <img src="..\img\demos\screenShots\compressed\squadforge1-min.png" class="carouselImgProject" />
                                                         </li>
                                                         <li class="splide__slide" style="list-style-type:none;">
-                                                            <img src="..\img\demos\screenShots\squadforge2.png" class="carouselImgProject" />
+                                                            <img src="..\img\demos\screenShots\compressed\squadforge2-min.png" class="carouselImgProject" />
                                                         </li>
                                                         <li class="splide__slide" style="list-style-type:none;">
-                                                            <img src="..\img\demos\screenShots\squadforge3.png" class="carouselImgProject" />
+                                                            <img src="..\img\demos\screenShots\compressed\squadforge3-min.png" class="carouselImgProject" />
                                                         </li>
                                                         <li class="splide__slide" style="list-style-type:none;">
-                                                            <img src="..\img\demos\screenShots\squadforge4.png" class="carouselImgProject" />
+                                                            <img src="..\img\demos\screenShots\compressed\squadforge4-min.png" class="carouselImgProject" />
                                                         </li>
                                                         <li class="splide__slide" style="list-style-type:none;">
-                                                            <img src="..\img\demos\screenShots\squadforge5.png" class="carouselImgProject" />
+                                                            <img src="..\img\demos\screenShots\compressed\squadforge5-min.png" class="carouselImgProject" />
                                                         </li>
 
                                                     </ul>
@@ -507,16 +507,16 @@
                                                     <div class="splide__track">
                                                         <ul class="splide__list" style="list-style-type:none;">
                                                             <li class="splide__slide" style="list-style-type:none;">
-                                                                <img src="..\img\demos\screenShots\blackjackjo1.png" class="carouselImgProject" />
+                                                                <img src="..\img\demos\screenShots\compressed\blackjackjo1-min.png" class="carouselImgProject" />
                                                             </li>
                                                             <li class="splide__slide" style="list-style-type:none;">
-                                                                <img src="..\img\demos\screenShots\blackjackjo2.png" class="carouselImgProject" />
+                                                                <img src="..\img\demos\screenShots\compressed\blackjackjo2-min.png" class="carouselImgProject" />
                                                             </li>
                                                             <li class="splide__slide" style="list-style-type:none;">
-                                                                <img src="..\img\demos\screenShots\blackjackjo3.png" class="carouselImgProject" />
+                                                                <img src="..\img\demos\screenShots\compressed\blackjackjo3-min.png" class="carouselImgProject" />
                                                             </li>
                                                             <li class="splide__slide" style="list-style-type:none;">
-                                                                <img src="..\img\demos\screenShots\blackjackjo4.png" class="carouselImgProject" />
+                                                                <img src="..\img\demos\screenShots\compressed\blackjackjo4-min.png" class="carouselImgProject" />
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -613,7 +613,7 @@
                                         <div class="projectDescriptionWrapper">
 
                                             <!-- Shape absolute (haut gauche) Mobile -->
-                                            <img src="../img/projects/bgShapes1_bjj-min.png" class="projectShapeBgAnim1-mobile topLeftBgMobile projectShapesDiv-top-left isMobile" />
+                                            <img src="../img/projects/bgShapes1_terrine-min.png" class="projectShapeBgAnim1-mobile topLeftBgMobile projectShapesDiv-top-left isMobile" />
 
 
                                             <div class="projectDescriptionHeader">
@@ -666,19 +666,19 @@
                                             <div class="splide__track">
                                                 <ul class="splide__list" style="list-style-type:none;">
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\terrine1.png" class="carouselImgProject" />
+                                                        <img src="..\img\demos\screenShots\compressed\terrine1-min.png" class="carouselImgProject" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\terrine2.png" class="carouselImgProject" />
+                                                        <img src="..\img\demos\screenShots\compressed\terrine2-min.png" class="carouselImgProject" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\terrine3.png" class="carouselImgProject" />
+                                                        <img src="..\img\demos\screenShots\compressed\terrine3-min.png" class="carouselImgProject" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\terrine4.png" class="carouselImgProject" />
+                                                        <img src="..\img\demos\screenShots\compressed\terrine4-min.png" class="carouselImgProject" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\terrine5.png" class="carouselImgProject" />
+                                                        <img src="..\img\demos\screenShots\compressed\terrine5-min.png" class="carouselImgProject" />
                                                     </li>
                                                 </ul>
                                             </div>
