Responsiv + style /cv sections mobile + btn lightMode disabled

--- a/cv.html
+++ b/cv.html
@@ -145,7 +145,7 @@
             <div class="containerToggleLight isMobile">
                 <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" data-theme="dark"></i>
                 <label class="switch">
-                    <input type="checkbox" id="themeToggle">
+                    <input type="checkbox" id="themeToggle" disabled="true">
                     <span class="slider"></span>
                 </label>
             </div>
