--- a/projets.html
+++ b/projets.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css" />
         <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css" />
         <link rel="stylesheet" type="text/css" href="../css/style4k.css" />
+        <link rel="stylesheet" type="text/css" href="../css/style-phoneL.css" />
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
